# gen_readme

./: .gitignore  README.md  makeReadMe.py  pyproject.toml  setup.py  test_makeReadMe.py
src/: aux.py  makeReadMe.py
